# airbyte-oss-api-sdk

./: .env.example  .gitignore  README.md  api.py  pyproject.toml  tests.py
api/: connections.py  core.py  destination.py  sources.py
api/models/: base.py  connections.py  destinations.py  source_definitions.py  sources.py
tests/: conftest.py  test_connection.py  test_destinations.py  test_source.py  tests.py
tests/data/connection/: connection_postgres_postgres.json  connection_slack_postgres.json
